--- a/lotustemple.html
+++ b/lotustemple.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<title>Taj Mahal</title>
+	<title>Lotus Temple</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,7 +18,7 @@
 <! –– HEADER ––>
 	<div class="header">
 		<p class="header" id="head">
-		<div class="header-name" id="head-name">Taj Mahal
+		<div class="header-name" id="head-name">Lotus Temple
 		<div class="header-button">
     		<a class="active" href="monuments.html">Home</a>
     		<a class="active" href="#contact">Contact</a>
@@ -31,12 +31,13 @@
 	<div>
 		<ul class="links">
   			<li><a href="monuments.html" target="_blank">Home</a></li>
-  			<li><a href="https://www.tajmahal.gov.in/" target="_blank">Official Site</a></li>
-  			<li><a href="https://www.tajmahal.gov.in/taj-mahal-photo-gallery.aspx" target="_blank">Gallery</a></li>
- 	 		<li><a href="https://en.wikipedia.org/wiki/Taj_Mahal" target="_blank">Wikipedia</a></li>
-  			<li><a href="https://en.wikipedia.org/api/rest_v1/page/pdf/Taj_Mahal" target="_blank">Detail Download</a></li>
-  			<li><a href="https://www.tajmahal.gov.in/images/map/front.jpg" target="_blank">Guide Maps</a></li>
-  			<li><a href="https://www.google.com/maps/place/Taj+Mahal/@27.1750082,78.0431095,3a,75y,64.05h,105.76t/data=!3m8!1e1!3m6!1sAF1QipMu_ZghP7g4QL7ACT2gXPTEwqbA4CjPpMN96RD5!2e10!3e11!6shttps:%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipMu_ZghP7g4QL7ACT2gXPTEwqbA4CjPpMN96RD5%3Dw224-h298-k-no-pi-15.755626-ya62.76752-ro-0-fo100!7i7776!8i3888!4m14!1m6!3m5!1s0x39747121d702ff6d:0xdd2ae4803f767dde!2sTaj+Mahal!8m2!3d27.1751448!4d78.0421422!3m6!1s0x39747121d702ff6d:0xdd2ae4803f767dde!8m2!3d27.1751448!4d78.0421422!14m1!1BCgIgARICCAI" target="_blank">360 Tour</a></li>
+  			<li><a href="http://www.bahaihouseofworship.in/" target="_blank">Official Site</a></li>
+  			<li><a href="https://www.gettyimages.in/photos/lotus-temple-new-delhi?mediatype=photography&phrase=lotus%20temple %20new%20delhi&sort=mostpopular" target="_blank">Gallery</a></li>
+        <li><a href="http://www.bahaihouseofworship.in/virtual-tourr" target="_blank">Virtual Tour</a></li>
+        <li><a href="https://3dwarehouse.sketchup.com/model/udcc9f251-02a2-460f-b6b6-40feac0a4c9f/LOTUS-TEMPLE-NEW-DELHI" target="_blank">3D Maps</a></li>
+ 	 		<li><a href="https://en.wikipedia.org/wiki/Lotus_Temple" target="_blank">Wikipedia</a></li>
+  			<li><a href="https://en.wikipedia.org/api/rest_v1/page/pdf/Lotus_Temple" target="_blank">Detail Download</a></li>
+  			<li><a href="https://www.google.com/maps/place/Lotus+Temple/@28.553492,77.2588264,3a,75y,1.24h,102.83t/data=!3m8!1e1!3m6!1sAF1QipPfbsOk-cb6wR7g-Ly-bou1tDrMmj6WZxpIwGg!2e10!3e11!6shttps:%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipPfbsOk-cb6wR7g-Ly-bou1tDrMmj6WZxpIwGg%3Dw203-h100-k-no-pi-12.829582-ya1.2379422-ro-0-fo100!7i5472!8i2736!4m7!3m6!1s0x390ce3c16e028cd1:0x653beb1ee85ec67a!8m2!3d28.553492!4d77.2588264!14m1!1BCgIgARICCAI" target="_blank">360 Tour</a></li>
 		</ul>
 	</div>
 <! –– TOP BUTTON ––>
@@ -61,17 +62,17 @@
 	<div class="slideshow-container">
     	<div class="mySlides fade">
       		<div class="numbertext">1 / 3</div>
-     		<img src="1.tajmahal/image1.jpg" style="width:100%">
+     		<img src="3.lotustemple/image1.jpg" style="width:100%">
     		</div>
 
     		<div class="mySlides fade">
       		<div class="numbertext">2 / 3</div>
-      		<img src="1.tajmahal/image2.jpg" style="width:100%">
+      		<img src="3.lotustemple/image2.jpg" style="width:100%">
     		</div>
     
     		<div class="mySlides fade">
       		<div class="numbertext">3 / 3</div>
-      		<img src="1.tajmahal/image3.jpg" style="width:100%">
+      		<img src="3.lotustemple/image3.jpg" style="width:100%">
     	</div>
 	</div><br>
 	<div style="text-align:center">
@@ -100,12 +101,12 @@
 		}
 	</script>
 <! –– BODY ––>
-	<div id="body-text"><div class="body-title">Taj Mahal-The Glory of India</div><br>The Taj Mahal of Agra is one of the Seven Wonders of the World, for reasons more than just looking magnificent. It's the history of Taj Mahal that adds a soul to its magnificence: a soul that is filled with love, loss, remorse, and love again. Because if it was not for love, the world would have been robbed of a fine example upon which people base their relationships. An example of how deeply a man loved his wife, that even after she remained but a memory, he made sure that this memory would never fade away. This man was the Mughal Emperor Shah Jahan, who was head-over-heels in love with Mumtaz Mahal, his dear wife. She was a Muslim Persian princess (her name Arjumand Banu Begum before marriage) and he was the son of the Mughal Emperor Jehangir and grandson of Akbar the Great. It was at the age of 14 that he met Mumtaz and fell in love with her.Five years later in the year 1612, they got married.<br>Mumtaz Mahal, an inseparable companion of Shah Jahan, died in 1631, while giving birth to their 14th child. Itnthe memory of his beloved wife that Shah Jahan built a magnificent monument as a tribute to her, which we today know as the "Taj Mahal". The construction of Taj Mahal started in the year 1631. Masons, stonecutters, inlayers, carvers, painters, calligraphers, dome-builders and other artisans were requisitioned from the whole of the empire and also from Central Asia and Iran, and it took approximately 22 years to build what we see today. An epitome of love, it made use of the services of 22,000 laborers and 1,000 elephants. The monument was built entirely out of white marble, which was brought in from all over India and Central Asia.After an expenditure of approximately 32 million rupees, Taj Mahal was finally completed in the year 1653.
+	<div id="body-text"><div class="body-title">Lotus Temple</div><br>The Lotus Temple (also known as Kamal Mandir)  in Delhi is a matchless architectural marvel and one of the prime tourist attractions of the National Capital. Shaped in the form of a spectacular lotus with white petals, it makes for a break-taking sight and attracts countless visitors throughout the year. Unlike most other places of worship, this temple or Bahai House of Worship does not allow ritualistic ceremonies and has no fixed pattern to conduct worship. A glorious symbol of oneness, this place of worship must be on your itinerary when planning a trip and booking your hotels in Delhi.<br>The Lotus Temple is a Bahai House of Worship, also known as Mashriqu’l-Adhkár, opened to the public in December 1986. Like all other Bahai temples, it is also dedicated to the oneness of religions and humanity. Followers of all religions are welcome to gather here to pray, worship, and read their scriptures. The Lotus Temple in Delhi is touted as one of the seven major Bahai Houses of Worship located across the world and the only one in Asia.
 	</div><hr width="100%">
 <! –– YOU TUBE & MAPS ––>
 	<ul class="reference container-fluid">
-		<li><div class="youtube col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe align="center"  src="https://www.youtube.com/embed/44rTTLjZZz4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></li>
-		<li><div class="maps col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1805124.7370024894!2d76.49555521016833!3d27.913195114688442!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39747121d702ff6d%3A0xdd2ae4803f767dde!2sTaj%20Mahal!5e0!3m2!1sen!2sin!4v1591280248639!5m2!1sen!2sin"  frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div></li>
+		<li><div class="youtube col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.youtube.com/embed/ThrIh9OVKaU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></li>
+		<li><div class="maps col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14017.910846015318!2d77.26033916352142!3d28.555414440728203!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce3c16e028cd1%3A0x653beb1ee85ec67a!2sLotus%20Temple!5e0!3m2!1sen!2sin!4v1591959872128!5m2!1sen!2sin" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div></li>
 	</ul><hr width="100%">
 <! –– FOOTER ––>
 	<footer class="panel-footer ">
@@ -152,7 +153,7 @@
         		</section>
       		</div>
 <! –– COPYRIGHT ––>
-      		<div class="text-center">&copy; Copyright Rohit Kumar|Taj Mahal|2020<br>
+      		<div class="text-center">&copy; Copyright Rohit Kumar|Lotus Temple|2020<br>
       			<marquee behavior="scroll" direction="left">This Site is Developed and Hosted by Rohit Kumar</marquee>
       		</div>
     	</div>
