--- a/redfort.html
+++ b/redfort.html
@@ -1,8 +1,8 @@
-<! –– HTML CODING FOR TAJ Mahal (tajmahal.html) ––>
+<! –– HTML CODING FOR RED FORT (redfort.html) ––>
 <!doctype html>
 <html lang="en">
 <head>
-	<title>Taj Mahal</title>
+	<title>Red Fort</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,7 +18,7 @@
 <! –– HEADER ––>
 	<div class="header">
 		<p class="header" id="head">
-		<div class="header-name" id="head-name">Taj Mahal
+		<div class="header-name" id="head-name">Red Fort
 		<div class="header-button">
     		<a class="active" href="monuments.html">Home</a>
     		<a class="active" href="#contact">Contact</a>
@@ -31,12 +31,10 @@
 	<div>
 		<ul class="links">
   			<li><a href="monuments.html" target="_blank">Home</a></li>
-  			<li><a href="https://www.tajmahal.gov.in/" target="_blank">Official Site</a></li>
-  			<li><a href="https://www.tajmahal.gov.in/taj-mahal-photo-gallery.aspx" target="_blank">Gallery</a></li>
- 	 		<li><a href="https://en.wikipedia.org/wiki/Taj_Mahal" target="_blank">Wikipedia</a></li>
-  			<li><a href="https://en.wikipedia.org/api/rest_v1/page/pdf/Taj_Mahal" target="_blank">Detail Download</a></li>
-  			<li><a href="https://www.tajmahal.gov.in/images/map/front.jpg" target="_blank">Guide Maps</a></li>
-  			<li><a href="https://www.google.com/maps/place/Taj+Mahal/@27.1750082,78.0431095,3a,75y,64.05h,105.76t/data=!3m8!1e1!3m6!1sAF1QipMu_ZghP7g4QL7ACT2gXPTEwqbA4CjPpMN96RD5!2e10!3e11!6shttps:%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipMu_ZghP7g4QL7ACT2gXPTEwqbA4CjPpMN96RD5%3Dw224-h298-k-no-pi-15.755626-ya62.76752-ro-0-fo100!7i7776!8i3888!4m14!1m6!3m5!1s0x39747121d702ff6d:0xdd2ae4803f767dde!2sTaj+Mahal!8m2!3d27.1751448!4d78.0421422!3m6!1s0x39747121d702ff6d:0xdd2ae4803f767dde!8m2!3d27.1751448!4d78.0421422!14m1!1BCgIgARICCAI" target="_blank">360 Tour</a></li>
+  			<li><a href="http://delhitourism.gov.in/delhitourism/tourist_place/red_fort.jsp" target="_blank">Official Site</a></li>
+ 	 	    <li><a href="https://en.wikipedia.org/wiki/Red_Fort" target="_blank">Wikipedia</a></li>
+  			<li><a href="https://en.wikipedia.org/api/rest_v1/page/pdf/Red_Fort" target="_blank">Detail Download</a></li>
+  			<li><a href="https://www.google.com/maps/place/Red+Fort/@28.6561592,77.2410203,3a,90y,354.74h,85.43t/data=!3m8!1e1!3m6!1sAF1QipMuHg-T-9O-I_WpVT_ptm3bt-t1Erjwh_Vy1mVc!2e10!3e11!6shttps:%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipMuHg-T-9O-I_WpVT_ptm3bt-t1Erjwh_Vy1mVc%3Dw203-h100-k-no-pi-8.890676-ya50.659164-ro0-fo100!7i4608!8i2304!4m7!3m6!1s0x390cfce26ec085ef:0x441e32f4fa5002fb!8m2!3d28.6561592!4d77.2410203!14m1!1BCgIgARICCAI" target="_blank">360 Tour</a></li>
 		</ul>
 	</div>
 <! –– TOP BUTTON ––>
@@ -61,17 +59,17 @@
 	<div class="slideshow-container">
     	<div class="mySlides fade">
       		<div class="numbertext">1 / 3</div>
-     		<img src="1.tajmahal/image1.jpg" style="width:100%">
+     		<img src="2.redfort/image1.jpg" style="width:100%">
     		</div>
 
     		<div class="mySlides fade">
       		<div class="numbertext">2 / 3</div>
-      		<img src="1.tajmahal/image2.jpg" style="width:100%">
+      		<img src="2.redfort/image2.jpg" style="width:100%">
     		</div>
     
     		<div class="mySlides fade">
       		<div class="numbertext">3 / 3</div>
-      		<img src="1.tajmahal/image3.jpg" style="width:100%">
+      		<img src="2.redfort/image3.jpg" style="width:100%">
     	</div>
 	</div><br>
 	<div style="text-align:center">
@@ -100,12 +98,12 @@
 		}
 	</script>
 <! –– BODY ––>
-	<div id="body-text"><div class="body-title">Taj Mahal-The Glory of India</div><br>The Taj Mahal of Agra is one of the Seven Wonders of the World, for reasons more than just looking magnificent. It's the history of Taj Mahal that adds a soul to its magnificence: a soul that is filled with love, loss, remorse, and love again. Because if it was not for love, the world would have been robbed of a fine example upon which people base their relationships. An example of how deeply a man loved his wife, that even after she remained but a memory, he made sure that this memory would never fade away. This man was the Mughal Emperor Shah Jahan, who was head-over-heels in love with Mumtaz Mahal, his dear wife. She was a Muslim Persian princess (her name Arjumand Banu Begum before marriage) and he was the son of the Mughal Emperor Jehangir and grandson of Akbar the Great. It was at the age of 14 that he met Mumtaz and fell in love with her.Five years later in the year 1612, they got married.<br>Mumtaz Mahal, an inseparable companion of Shah Jahan, died in 1631, while giving birth to their 14th child. Itnthe memory of his beloved wife that Shah Jahan built a magnificent monument as a tribute to her, which we today know as the "Taj Mahal". The construction of Taj Mahal started in the year 1631. Masons, stonecutters, inlayers, carvers, painters, calligraphers, dome-builders and other artisans were requisitioned from the whole of the empire and also from Central Asia and Iran, and it took approximately 22 years to build what we see today. An epitome of love, it made use of the services of 22,000 laborers and 1,000 elephants. The monument was built entirely out of white marble, which was brought in from all over India and Central Asia.After an expenditure of approximately 32 million rupees, Taj Mahal was finally completed in the year 1653.
+	<div id="body-text"><div class="body-title">Red Fort</div><br>The Red Fort Complex was built as the palace fort of Shahjahanabad – the new capital of the fifth Mughal Emperor of India, Shah Jahan. Named for its massive enclosing walls of red sandstone, it is adjacent to an older fort, the Salimgarh, built by Islam Shah Suri in 1546, with which it forms the Red Fort Complex. The private apartments consist of a row of pavilions connected by a continuous water channel, known as the Nahr-i-Behisht (Stream of Paradise). The Red Fort is considered to represent the zenith of Mughal creativity which, under the Shah Jahan, was brought to a new level of refinement. The planning of the palace is based on Islamic prototypes, but each pavilion reveals architectural elements typical of Mughal building, reflecting a fusion of Persian, Timurid and Hindu traditions The Red Fort’s innovative planning and architectural style, including the garden design, strongly influenced later buildings and gardens in Rajasthan, Delhi, Agra and further afield.<br>In 1638, the Mughal Emperor Shah Jahan moved the capital of his empire from Agra to a newly constructed city in Delhi that he called Shahjahanabad. Along with the construction of this new city, he laid the foundations of his palace, the Red Fort or Lal Qila. This massive walled citadel with red sandstone walls took nearly a decade to complete. It is considered to be better planned than the Agra Fort, as Shah Jahan learned from his experience pf living there. This fort was the seat of the Mughal empire for around 200 years, until it fell into British hands. The last Mughal Emperor Bahadur Shah Zafar was coronated here in 1837, during which time it is said that his powers did not extend beyond the boundaries of his palace.
 	</div><hr width="100%">
 <! –– YOU TUBE & MAPS ––>
 	<ul class="reference container-fluid">
-		<li><div class="youtube col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe align="center"  src="https://www.youtube.com/embed/44rTTLjZZz4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></li>
-		<li><div class="maps col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1805124.7370024894!2d76.49555521016833!3d27.913195114688442!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39747121d702ff6d%3A0xdd2ae4803f767dde!2sTaj%20Mahal!5e0!3m2!1sen!2sin!4v1591280248639!5m2!1sen!2sin"  frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div></li>
+		<li><div class="youtube col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.youtube.com/embed/UA4VR4wc7cU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></li>
+		<li><div class="maps col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14004.383054257947!2d77.24382052385081!3d28.656851160351138!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfce26ec085ef%3A0x441e32f4fa5002fb!2sRed%20Fort!5e0!3m2!1sen!2sin!4v1591958618650!5m2!1sen!2sin" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div></li>
 	</ul><hr width="100%">
 <! –– FOOTER ––>
 	<footer class="panel-footer ">
@@ -139,24 +137,24 @@
           			<hr class="visible-xs">
         		</section>
 <! –– ABOUT US ––>
-        		<section id="about" class="col-sm-4">
-          			<p>Contact Us:<br>
-          			<a href="https://rk2962002.github.io/my-site/index.html" target="_blank">Rohit Kumar</a><br><a href="https://ghaziabad.nic.in/en/" target="_blank">Ghaziabad,U.P</a><br>
-          			<a href="tel:9084950475"><span class="glyphicon glyphicon-earphone"></span>&nbsp;9084950475</a><br>
-          			<a href = "mailto: rohit.19b101051@abes.ac.in"><span class="glyphicon glyphicon-envelope"></span>&nbsp;&nbsp;rohit.19b101051@abes.ac.in</a><br><br>Follows Us:<br>
-        			<a href="https://www.facebook.com/profile.php?id=100040466752176" target="_blank" class="fa fa-facebook"></a>&nbsp;
-					<a href="https://twitter.com/rk2962002" target="_blank" class="fa fa-twitter"></a>&nbsp;
-					<a href="https://www.linkedin.com/in/rohit-kumar-28494415a/" target="_blank" class="fa fa-linkedin"></a>&nbsp;
-					<a href="https://www.instagram.com/rk__rohitkumar/" target="_blank" class="fa fa-instagram"></a>
-					</p>
-        		</section>
-      		</div>
+            <section id="about" class="col-sm-4">
+                <p>Contact Us:<br>
+                <a href="https://rk2962002.github.io/my-site/index.html" target="_blank">Rohit Kumar</a><br><a href="https://ghaziabad.nic.in/en/" target="_blank">Ghaziabad,U.P</a><br>
+                <a href="tel:9084950475"><span class="glyphicon glyphicon-earphone"></span>&nbsp;9084950475</a><br>
+                <a href = "mailto: rohit.19b101051@abes.ac.in"><span class="glyphicon glyphicon-envelope"></span>&nbsp;&nbsp;rohit.19b101051@abes.ac.in</a><br><br>Follows Us:<br>
+              <a href="https://www.facebook.com/profile.php?id=100040466752176" target="_blank" class="fa fa-facebook"></a>&nbsp;
+          <a href="https://twitter.com/rk2962002" target="_blank" class="fa fa-twitter"></a>&nbsp;
+          <a href="https://www.linkedin.com/in/rohit-kumar-28494415a/" target="_blank" class="fa fa-linkedin"></a>&nbsp;
+          <a href="https://www.instagram.com/rk__rohitkumar/" target="_blank" class="fa fa-instagram"></a>
+          </p>
+            </section>
+          </div>
 <! –– COPYRIGHT ––>
-      		<div class="text-center">&copy; Copyright Rohit Kumar|Taj Mahal|2020<br>
-      			<marquee behavior="scroll" direction="left">This Site is Developed and Hosted by Rohit Kumar</marquee>
-      		</div>
-    	</div>
-	</footer>
+          <div class="text-center">&copy; Copyright Rohit Kumar|Red Fort|2020<br>
+            <marquee behavior="scroll" direction="left">This Site is Developed and Hosted by Rohit Kumar</marquee>
+          </div>
+      </div>
+  </footer>
 </body>
 </html>
 <! –– END OF CODE ––>
