--- a/lotustemple.html
+++ b/lotustemple.html
@@ -1,4 +1,4 @@
-<! –– HTML CODING FOR TAJ Mahal (tajmahal.html) ––>
+<! –– HTML CODING FOR LOTUS TEMPLE (lotustemple.html) ––>
 <!doctype html>
 <html lang="en">
 <head>
@@ -136,8 +136,8 @@
           			<a href="https://www.wikipedia.org/" target="_blank">5.Wikipedia<br>
           			<a href="https://en.unesco.org/" target="_blank">6.UNESCO<br>
           			<a href="#projrctreport" target="_blank">7.Project Report<br>
-          			<a href="https://www.webfreecounter.com/" target="_blank">Visitor No: <img src="https://www.webfreecounter.com/hit.php?id=grmaoxpa&nd=7&style=121" border="0" alt="free counter"></a>
-          			<hr class="visible-xs">
+          			<a href="https://www.webfreecounter.com/" target="_blank">Visitor No: <img src="https://www.webfreecounter.com/hit.php?id=guaoknq&nd=6&style=121" border="0" alt="free counter"></a>
+                <hr class="visible-xs">
         		</section>
 <! –– ABOUT US ––>
         		<section id="about" class="col-sm-4">
