--- a/qutubminar.html
+++ b/qutubminar.html
@@ -103,10 +103,9 @@
 	</div><hr width="100%">
 <! –– YOU TUBE & MAPS ––>
 	<ul class="reference container-fluid">
-		<li><div class="youtube col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe width="560" height="315" src="https://www.youtube.com/embed/o9IQv1Sa82Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></li>
-		<li><div class="maps col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d876.3767620327965!2d77.18497342916105!3d28.52447539890379!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d1e0667819b4f%3A0x834995f160759db8!2sQutub%20Minar!5e0!3m2!1sen!2sin!4v1591961824582!5m2!1sen!2sin" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div></li>
+		<li><div class="youtube col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.youtube.com/embed/ODP9nD9Aro4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></li>
+		<li><div class="maps col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d876.3767620327965!2d77.18497342916105!3d28.52447539890379!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d1e0667819b4f%3A0x834995f160759db8!2sQutub%20Minar!5e0!3m2!1sen!2sin!4v1591961824582!5m2!1sen!2sin" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div></li>
 	</ul><hr width="100%">
-  <p><iframe src="https://www.google.com/maps/embed?pb=!4v1591961792094!6m8!1m7!1sCAoSLEFGMVFpcE8xVzgyQW54THVUaWVUZWJSY2swdU9WRFp3RHZjVGRWdHVoX3Vp!2m2!1d28.5238895!2d77.1849976!3f15.384615999999994!4f14.071299999999994!5f0.7820865974627469" width="800" height="600" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></p>
 <! –– FOOTER ––>
 	<footer class="panel-footer ">
     	<div class="container">
