--- a/qutubminar.html
+++ b/qutubminar.html
@@ -13,6 +13,11 @@
 	<link rel="stylesheet" href="css/styles.css">
 	<link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Oxygen&display=swap" rel="stylesheet">
+  <style>
+    body {
+      background-image: url('img_girl.jpg');
+    }
+  </style>
 </head>
 <body>
 <! –– HEADER ––>
