--- a/qutubminar.html
+++ b/qutubminar.html
@@ -2,6 +2,11 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <style>
+    body {
+      background:transparent url('background-img/D.jpg') repeat center top;
+    }
+  </style>
 	<title>Qutub Minar</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,11 +18,6 @@
 	<link rel="stylesheet" href="css/styles.css">
 	<link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Oxygen&display=swap" rel="stylesheet">
-  <style>
-    body {
-      background-image: url('img_girl.jpg');
-    }
-  </style>
 </head>
 <body>
 <! –– HEADER ––>
