--- a/monuments.html
+++ b/monuments.html
@@ -2,6 +2,11 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <style>
+    body {
+      background:transparent url('background-img/monuments.jpg') repeat center top;
+    }
+  </style>
 	<title></title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,6 +18,7 @@
 	<link rel="stylesheet" href="css/styles.css">
 	<link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Oxygen&display=swap" rel="stylesheet">
+
 </head>
 <body>
 <! –– HEADER ––>
