--- a/redfort.html
+++ b/redfort.html
@@ -2,6 +2,11 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <style>
+    body {
+      background:transparent url('background-img/B.jpg') repeat center top;
+    }
+  </style>
 	<title>Red Fort</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -32,6 +37,7 @@
 		<ul class="links">
   			<li><a href="monuments.html" target="_blank">Home</a></li>
   			<li><a href="http://delhitourism.gov.in/delhitourism/tourist_place/red_fort.jsp" target="_blank">Official Site</a></li>
+        <li><a href="https://www.gettyimages.in/photos/redfort?mediatype=photography&phrase=redfort&sort=mostpopular" target="_blank">Gallery</a></li>
  	 	    <li><a href="https://en.wikipedia.org/wiki/Red_Fort" target="_blank">Wikipedia</a></li>
   			<li><a href="https://en.wikipedia.org/api/rest_v1/page/pdf/Red_Fort" target="_blank">Detail Download</a></li>
   			<li><a href="https://www.google.com/maps/place/Red+Fort/@28.6561592,77.2410203,3a,90y,354.74h,85.43t/data=!3m8!1e1!3m6!1sAF1QipMuHg-T-9O-I_WpVT_ptm3bt-t1Erjwh_Vy1mVc!2e10!3e11!6shttps:%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipMuHg-T-9O-I_WpVT_ptm3bt-t1Erjwh_Vy1mVc%3Dw203-h100-k-no-pi-8.890676-ya50.659164-ro0-fo100!7i4608!8i2304!4m7!3m6!1s0x390cfce26ec085ef:0x441e32f4fa5002fb!8m2!3d28.6561592!4d77.2410203!14m1!1BCgIgARICCAI" target="_blank">360 Tour</a></li>
