--- a/lotustemple.html
+++ b/lotustemple.html
@@ -42,7 +42,7 @@
         <li><a href="https://3dwarehouse.sketchup.com/model/udcc9f251-02a2-460f-b6b6-40feac0a4c9f/LOTUS-TEMPLE-NEW-DELHI" target="_blank">3D Maps</a></li>
  	 		<li><a href="https://en.wikipedia.org/wiki/Lotus_Temple" target="_blank">Wikipedia</a></li>
   			<li><a href="https://en.wikipedia.org/api/rest_v1/page/pdf/Lotus_Temple" target="_blank">Detail Download</a></li>
-  			<li><a href="https://www.google.com/maps/place/Lotus+Temple/@28.553492,77.2588264,3a,75y,1.24h,102.83t/data=!3m8!1e1!3m6!1sAF1QipPfbsOk-cb6wR7g-Ly-bou1tDrMmj6WZxpIwGg!2e10!3e11!6shttps:%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipPfbsOk-cb6wR7g-Ly-bou1tDrMmj6WZxpIwGg%3Dw203-h100-k-no-pi-12.829582-ya1.2379422-ro-0-fo100!7i5472!8i2736!4m7!3m6!1s0x390ce3c16e028cd1:0x653beb1ee85ec67a!8m2!3d28.553492!4d77.2588264!14m1!1BCgIgARICCAI" target="_blank">360 Tour</a></li>
+  			<li><a href="https://goo.gl/maps/fFEhT6SCnRAjFXHn8" target="_blank">360 Tour</a></li>
 		</ul>
 	</div>
 <! –– TOP BUTTON ––>
