--- a/monuments.html
+++ b/monuments.html
@@ -7,7 +7,7 @@
       background:transparent url('background-img/monuments.jpg') repeat center top;
     }
   </style>
-	<title></title>
+	<title>Monuments of India</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -24,7 +24,7 @@
 <! –– HEADER ––>
 	<div class="header">
 		<p class="header" id="head">
-		<div class="header-name" id="head-name">
+		<div class="header-name" id="head-name">Monuments of India
 		<div class="header-button">
     		<a class="active" href="monuments.html">Home</a>
     		<a class="active" href="#contact">Contact</a>
