--- a/qutubminar.html
+++ b/qutubminar.html
@@ -40,7 +40,7 @@
   			<li><a href="https://www.gettyimages.in/photos/qutub-minar?mediatype=photography&phrase=qutub%20minar&sort=most popular" target="_blank">Gallery</a></li>
  	 		<li><a href="https://en.wikipedia.org/wiki/Qutb_Minar" target="_blank">Wikipedia</a></li>
   			<li><a href="https://en.wikipedia.org/api/rest_v1/page/pdf/Qutb_Minar" target="_blank">Detail Download</a></li>
-  			<li><a href="https://www.google.com/maps/place/Qutub+Minar/@28.5238895,77.1849976,3a,75y,15.38h,104.07t/data=!3m8!1e1!3m6!1sAF1QipO1W82AnxLuTieTebRck0uOVDZwDvcTdVtuh_ui!2e10!3e11!6shttps:%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipO1W82AnxLuTieTebRck0uOVDZwDvcTdVtuh_ui%3Dw203-h100-k-no-pi-4.5809417-ya15.425033-ro2.4888337-fo100!7i5376!8i2688!4m7!3m6!1s0x390d1e0667819b4f:0x834995f160759db8!8m2!3d28.5244754!4d77.1855206!14m1!1BCgIgARICCAI" target="_blank">360 Tour</a></li>
+  			<li><a href="https://goo.gl/maps/z8wUifChnWvfnpHK6" target="_blank">360 Tour</a></li>
 		</ul>
 	</div>
 <! –– TOP BUTTON ––>
