--- a/victoriamemorial.html
+++ b/victoriamemorial.html
@@ -36,12 +36,12 @@
 	<div>
 		<ul class="links">
   			<li><a href="monuments.html" target="_blank">Home</a></li>
-  			<li><a href="https://www.tajmahal.gov.in/" target="_blank">Official Site</a></li>
-  			<li><a href="https://www.tajmahal.gov.in/taj-mahal-photo-gallery.aspx" target="_blank">Gallery</a></li>
- 	 		<li><a href="https://en.wikipedia.org/wiki/Taj_Mahal" target="_blank">Wikipedia</a></li>
-  			<li><a href="https://en.wikipedia.org/api/rest_v1/page/pdf/Taj_Mahal" target="_blank">Detail Download</a></li>
-  			<li><a href="https://www.tajmahal.gov.in/images/map/front.jpg" target="_blank">Guide Maps</a></li>
-  			<li><a href="https://www.google.com/maps/place/Taj+Mahal/@27.1750082,78.0431095,3a,75y,64.05h,105.76t/data=!3m8!1e1!3m6!1sAF1QipMu_ZghP7g4QL7ACT2gXPTEwqbA4CjPpMN96RD5!2e10!3e11!6shttps:%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipMu_ZghP7g4QL7ACT2gXPTEwqbA4CjPpMN96RD5%3Dw224-h298-k-no-pi-15.755626-ya62.76752-ro-0-fo100!7i7776!8i3888!4m14!1m6!3m5!1s0x39747121d702ff6d:0xdd2ae4803f767dde!2sTaj+Mahal!8m2!3d27.1751448!4d78.0421422!3m6!1s0x39747121d702ff6d:0xdd2ae4803f767dde!8m2!3d27.1751448!4d78.0421422!14m1!1BCgIgARICCAI" target="_blank">360 Tour</a></li>
+  			<li><a href="http://victoriamemorial-cal.org/home/content/en" target="_blank">Official Site</a></li>
+  			<li><a href="https://www.gettyimages.in/photos/victoria-memorial?mediatype=photography&phrase=victoria%20memorial &sort=mostpopular" target="_blank">Gallery</a></li>
+ 	 		<li><a href="https://en.wikipedia.org/wiki/Victoria_Memorial,_Kolkata" target="_blank">Wikipedia</a></li>
+  			<li><a href="https://en.wikipedia.org/api/rest_v1/page/pdf/Victoria_Memorial%2C_Kolkata" target="_blank">Detail Download</a></li>
+  			<li><a href="http://victoriamemorial-cal.org/uploads/E-Catalogue-List/E-Catalogue%20of%20Johan%20Zoffany.pdf" target="_blank">E-Catalogue</a></li>
+  			<li><a href="https://goo.gl/maps/rTgt4pwpkoJMbYc7A" target="_blank">360 Tour</a></li>
 		</ul>
 	</div>
 <! –– TOP BUTTON ––>
@@ -66,17 +66,17 @@
 	<div class="slideshow-container">
     	<div class="mySlides fade">
       		<div class="numbertext">1 / 3</div>
-     		<img src="1.tajmahal/image1.jpg" style="width:100%">
+     		<img src="5.victoriamemorial/image1.jpg" style="width:100%">
     		</div>
 
     		<div class="mySlides fade">
       		<div class="numbertext">2 / 3</div>
-      		<img src="1.tajmahal/image2.jpg" style="width:100%">
+      		<img src="5.victoriamemorial/image2.jpg" style="width:100%">
     		</div>
     
     		<div class="mySlides fade">
       		<div class="numbertext">3 / 3</div>
-      		<img src="1.tajmahal/image3.jpg" style="width:100%">
+      		<img src="5.victoriamemorial/image3.jpg" style="width:100%">
     	</div>
 	</div><br>
 	<div style="text-align:center">
@@ -105,7 +105,7 @@
 		}
 	</script>
 <! –– BODY ––>
-	<div id="body-text"><div class="body-title">Taj Mahal</div><br>The Taj Mahal of Agra is one of the Seven Wonders of the World, for reasons more than just looking magnificent. It's the history of Taj Mahal that adds a soul to its magnificence: a soul that is filled with love, loss, remorse, and love again. Because if it was not for love, the world would have been robbed of a fine example upon which people base their relationships. An example of how deeply a man loved his wife, that even after she remained but a memory, he made sure that this memory would never fade away. This man was the Mughal Emperor Shah Jahan, who was head-over-heels in love with Mumtaz Mahal, his dear wife. She was a Muslim Persian princess (her name Arjumand Banu Begum before marriage) and he was the son of the Mughal Emperor Jehangir and grandson of Akbar the Great. It was at the age of 14 that he met Mumtaz and fell in love with her.Five years later in the year 1612, they got married.<br>Mumtaz Mahal, an inseparable companion of Shah Jahan, died in 1631, while giving birth to their 14th child. Itnthe memory of his beloved wife that Shah Jahan built a magnificent monument as a tribute to her, which we today know as the "Taj Mahal". The construction of Taj Mahal started in the year 1631. Masons, stonecutters, inlayers, carvers, painters, calligraphers, dome-builders and other artisans were requisitioned from the whole of the empire and also from Central Asia and Iran, and it took approximately 22 years to build what we see today. An epitome of love, it made use of the services of 22,000 laborers and 1,000 elephants. The monument was built entirely out of white marble, which was brought in from all over India and Central Asia.After an expenditure of approximately 32 million rupees, Taj Mahal was finally completed in the year 1653.
+	<div id="body-text"><div class="body-title">Victoria Memorial</div><br>The Taj Mahal of Agra is one of the Seven Wonders of the World, for reasons more than just looking magnificent. It's the history of Taj Mahal that adds a soul to its magnificence: a soul that is filled with love, loss, remorse, and love again. Because if it was not for love, the world would have been robbed of a fine example upon which people base their relationships. An example of how deeply a man loved his wife, that even after she remained but a memory, he made sure that this memory would never fade away. This man was the Mughal Emperor Shah Jahan, who was head-over-heels in love with Mumtaz Mahal, his dear wife. She was a Muslim Persian princess (her name Arjumand Banu Begum before marriage) and he was the son of the Mughal Emperor Jehangir and grandson of Akbar the Great. It was at the age of 14 that he met Mumtaz and fell in love with her.Five years later in the year 1612, they got married.<br>Mumtaz Mahal, an inseparable companion of Shah Jahan, died in 1631, while giving birth to their 14th child. Itnthe memory of his beloved wife that Shah Jahan built a magnificent monument as a tribute to her, which we today know as the "Taj Mahal". The construction of Taj Mahal started in the year 1631. Masons, stonecutters, inlayers, carvers, painters, calligraphers, dome-builders and other artisans were requisitioned from the whole of the empire and also from Central Asia and Iran, and it took approximately 22 years to build what we see today. An epitome of love, it made use of the services of 22,000 laborers and 1,000 elephants. The monument was built entirely out of white marble, which was brought in from all over India and Central Asia.After an expenditure of approximately 32 million rupees, Taj Mahal was finally completed in the year 1653.
 	</div><hr width="100%">
 <! –– YOU TUBE & MAPS ––>
 	<ul class="reference container-fluid">
